update directory name